--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <p></p>
+    <div id="info-display" class="info-display">nombres misteres </div>
     <div class="box">
+      
       <button class="shuffle-button" onclick="handleClick()">shuffle</button>
-      <div id="info-display" class="info-display">Loto</div>
-      <div>
-        <label for="user-input">veiller enter 3 nombres : </label>
-        <input type="text" name="user-input" id="user-input" autocomplete="off" />
-        <button onclick="handleValidation()" class="validation-button">valider ?</button>
-      </div>
+      <label for="user-input">veiller enter 3 nombres : </label>
+      <input type="text" name="user-input" id="user-input" autocomplete="off" />
+      <button onclick="handleValidation()" class="validation-button">
+        valider ?
+      </button>
     </div>
   </body>
   <script src="logic.js"></script>
