--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <p></p>
+    <!--TODO: afficher un dialogue avec le joueur pour savoir le niveau de jeu dont il veut jouer et le remplacer par le jeu l'orsqu'il appuie sur le bouton summit  -->
     <div id="info-display" class="info-display">nombres misteres </div>
     <div class="box">
-      
+      <!-- <p class="disclaimer">Salut a toi jeune joueur , choisir 3 </p> -->
       <button class="shuffle-button" onclick="handleClick()">shuffle</button>
       <label for="user-input">veiller enter 3 nombres : </label>
       <input type="text" name="user-input" id="user-input" autocomplete="off" />
