--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="info-display" class="info-display">nombres misteres </div>
     <div class="box">
       <!-- <p class="disclaimer">Salut a toi jeune joueur , choisir 3 </p> -->
-      <button class="shuffle-button" onclick="handleClick()">shuffle</button>
+      <button class="shuffle-button" onclick="handleShowNumberClick()">shuffle</button>
       <label for="user-input">veiller enter 3 nombres : </label>
       <input type="text" name="user-input" id="user-input" autocomplete="off" />
       <button onclick="handleValidation()" class="validation-button">
