--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <button class="shuffle-button" onclick="handleShowNumberClick()">shuffle</button>
       <label for="user-input">veiller enter 3 nombres : </label>
       <input type="text" name="user-input" id="user-input" autocomplete="off" />
-      <button onclick="handleValidation()" class="validation-button">
+      <button onclick="handleValidationClick()" class="validation-button">
         valider ?
       </button>
     </div>
