removing trash function and update dom state

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
     <div id="info-display" class="info-display">nombres misteres </div>
     <div class="box">
       <!-- <p class="disclaimer">Salut a toi jeune joueur , choisir 3 </p> -->
-      <button class="shuffle-button" onclick="handleShowNumberClick()">shuffle</button>
       <label for="user-input">veiller enter 3 nombres : </label>
       <input type="text" name="user-input" id="user-input" autocomplete="off" />
-      <button onclick="handleValidationClick()" class="validation-button">
-        valider ?
+      <button onclick="play()" class="play-button" id="play-button">
+        PLAY
       </button>
     </div>
   </body>
