--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div id="info-display" class="info-display">nombres misteres </div>
     <div class="box">
       <!-- <p class="disclaimer">Salut a toi jeune joueur , choisir 3 </p> -->
-      <label for="user-input">veiller enter 3 nombres : </label>
-      <input type="text" name="user-input" id="user-input" autocomplete="off" />
+      <label for="user-inputnum">veiller enter 3 nombres : </label>
+      <input type="text" name="user-input" id="user-inputnum" autocomplete="off" />
       <button onclick="play()" class="play-button" id="play-button">
         PLAY
       </button>
