some check before launching the comparison function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="info-display" class="info-display">nombres misteres </div>
     <div class="box">
       <!-- <p class="disclaimer">Salut a toi jeune joueur , choisir 3 </p> -->
-      <label for="user-inputnum">veiller enter 3 nombres : </label>
+      <label for="user-inputnum">input 3 digit for playing : </label>
       <input type="text" name="user-input" id="user-inputnum" autocomplete="off" />
       <button onclick="play()" class="play-button" id="play-button">
         PLAY
